--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+.main-content {
+  padding-top: 60px;
+}
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+
